<?xml version="1.0" ?>
<package format="3">
  <name>ping360_sonar_msgs</name>
  <version>1.4.0</version> 
  <description>A ROS package for Blue Robotics Ping360 Sonar</description>

  <url type="website">http://wiki.ros.org/ping360_sonar</url>
  <url type="repository">https://github.com/CentraleNantesRobotics/ping360_sonar.git</url>
  <url type="bugtracker">https://github.com/CentraleNantesRobotics/ping360_sonar/issues</url>

  <author>Anas Mazouni</author>
  <author>Henrique Martinez de Azevedo</author>

  <maintainer email="anas.mazouni@stormix.co">Anas Mazouni</maintainer>
  <maintainer email="henrique.martinez-de-azevedo@eleves.ec-nantes.fr">Henrique Martinez de Azevedo</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>rclpy</build_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>


  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>